--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,6 +5,6 @@
   <title>{{ .Title }} - {{ .Site.Title }}</title>
   <meta name="description" content="{{ .Title }}">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{{ .Site.BaseURL }}assets/css/main.css">
+  {{ partial "css.html" }}
 </head>
 <body>
