--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,6 +10,11 @@
 <body>
   <main>
     hello
+    <section class="game">
+      <div class="map">
+        <div class="alice"></div>
+      </div>
+    </section>
   </main>
   <footer></footer>
   {{ partial "js.html" }}
