--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,11 +9,9 @@
 </head>
 <body>
   <main>
-    hello
     <section class="game">
-      <div class="map">
-        <div class="alice"></div>
-      </div>
+      <div class="alice"></div>
+      <div class="map"></div>
     </section>
   </main>
   <footer></footer>
