--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -4,32 +4,8 @@
         width: 159px
         height: 263px
         background: url('/assets/images/characters/alice/sprites.png') -10px -10px
+        animation: play 0.8s steps(4) infinite
 
-//     .bg-01 {
-//     width: 159px; height: 263px;
-//     background: url('css_sprites.png') -10px -10px;
-// }
-
-// x
-// .bg-02 {
-//     width: 159px; height: 263px;
-//     background: url('css_sprites.png') -189px -10px;
-// }
-
-// x
-// .bg-03 {
-//     width: 159px; height: 263px;
-//     background: url('css_sprites.png') -368px -10px;
-// }
-
-// x
-// .bg-04 {
-//     width: 159px; height: 263px;
-//     background: url('css_sprites.png') -547px -10px;
-// }
-
-// x
-// .bg-05 {
-//     width: 159px; height: 263px;
-//     background: url('css_sprites.png') -726px -10px;
-// }
+@keyframes play
+    100%
+        background-position: -726px
