--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,10 +1,14 @@
 .game
     .alice
+        position: absolute
         display: block
         width: 159px
         height: 263px
         background: url('/assets/images/characters/alice/sprites.png') -10px -10px
         animation: play 0.8s steps(4) infinite
+    .map
+        position: absolute
+        background-image: url(map/map.jpg)
 
 @keyframes play
     100%
