--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -8,7 +8,7 @@
         animation: play 0.8s steps(4) infinite
     .map
         position: absolute
-        background-image: url('/static/assets/images/map/map.jpg')
+        background-image: url('/assets/images/map/map.jpg')
 
 @keyframes play
     100%
