--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -9,10 +9,11 @@
         animation: play 0.8s steps(4) infinite
     .map
         position: absolute
-        background: url('/assets/images/map/map.jpg')
+        background-image: url('/assets/images/map/map.jpg')
+        background-size: 100%
         height: 100%
         width: 100%
-        object-fit: cover
+
 
 @keyframes play
     100%
