--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <main>
-    <section class="game">
+    <section id="game">
       <div class="alice"></div>
       <div class="map"></div>
     </section>
