--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <main>
+    <section class="home">
+    </section>
     <section class="game">
       <div class="alice"></div>
       <div class="map"></div>
