--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,3 +1,5 @@
+
+    
 .game
     .alice
         position: absolute
@@ -13,6 +15,9 @@
         background-size: 100%
         height: 100%
         width: 100%
+
+.home
+    background: #FFF9E9
 
 
 @keyframes play
