--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <main>
+    <a href="#home">Home</a>
+    <a href="#game">Game</a>
     <section id="game">
       <div class="alice"></div>
       <div class="map"></div>
