--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,5 +1,5 @@
-#main
-    
+#home
+    background: #FFF9E9
 #game
     .alice
         position: absolute
@@ -16,8 +16,8 @@
         height: 100%
         width: 100%
 
-.home
-    background: #FFF9E9
+
+
 
 
 @keyframes play
