--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,6 +1,22 @@
+#nav
+    position: absolute
+    top: 0
+    z-index: 10
 #home
+    display: none
+    position: absolute
     background: #FFF9E9
+    &:target
+        display: block
 #game
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    display: none
+    &:target
+        display: block
     .alice
         position: absolute
         z-index: 1
@@ -15,10 +31,6 @@
         background-size: 100%
         height: 100%
         width: 100%
-
-
-
-
 
 @keyframes play
     100%
