--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,5 +1,15 @@
+
+$heading-font-family: "Calvino Grande", serif
+$body-font-family: "Calvino Grande", serif
+
+$heading-font-weight: bold 
+$h1-size-desktop: 80px
+
+    
 #home
     background: #FFF9E9
+
+
 #game
     .alice
         position: absolute
