--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,6 +12,7 @@
     <a href="#home">Home</a>
     <a href="#game">Game</a>
     <section id="home">
+      <h1>Hello</h1>
     </section>
     <section id="game">
       <div class="alice"></div>
