--- a/layouts/index.html
+++ b/layouts/index.html
@@ -13,10 +13,10 @@
       <a href="#home">Accueil</a>
       <a href="#game">Jouer</a>
     </div>
-    <section id="home">
+    <section id="home" class="screen">
       <h1>Alice au pays des cryptos</h1>
     </section>
-    <section id="game">
+    <section id="game" class="screen">
       <div class="alice"></div>
       <div class="map"></div>
     </section>
