--- a/assets/sass/_nav.sass
+++ b/assets/sass/_nav.sass
@@ -2,3 +2,10 @@
     position: absolute
     top: 0
     z-index: 10
+.screen
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    display: none
