--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -9,3 +9,17 @@
     right: 0
     bottom: 0
     display: none
+
+h1
+    font-size: px2rem(80)
+    font-weight: bold
+
+p
+    font-size: px2rem(22)
+    font-weight: normal
+    line-height: px2rem(36)
+
+.subtitle
+    font-size: px2rem(42)
+    font-weight: 100
+    font-style: italic
