--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -13,13 +13,16 @@
 h1
     font-size: px2rem(80)
     font-weight: bold
+    font-family: "Calvino Grande", serif
 
 p
     font-size: px2rem(22)
     font-weight: normal
     line-height: px2rem(36)
+    font-family: "Calvino Grande", serif
 
 .subtitle
     font-size: px2rem(42)
     font-weight: 100
     font-style: italic
+    font-family: "Calvino Grande", serif
