--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -13,6 +13,7 @@
 h1
     font-size: px2rem(80)
     font-weight: bold
+    text-align: center
 
 p
     font-size: px2rem(22)
@@ -23,3 +24,4 @@ p
     font-size: px2rem(42)
     font-weight: 100
     font-style: italic
+    text-align: center
