--- a/layouts/index.html
+++ b/layouts/index.html
@@ -17,7 +17,7 @@
       <h1>Alice au pays des cryptos</h1>
       <p class="subtitle">Une plongée sociologique, gratuite et duplicable</p>
       <p>Le monde des cryptos & des NFTs peut être à la fois dense et superficiel, transparent et opaque, technique et mystique. Afin de guider les visiteurs et les curieux, Etienne Mineur (Volumique) et Arnaud Levy (noesya) proposent un voyage critique parmi ses lieux communs, ses îlots stéréotypés et ses montagnes technologiques. Ce vademecum virtuel est illustré d’images créées par une intelligence artificielle, avec l’outil Midjourney.</p>
-      <a href="#game">Jouer</a>
+      <a href="#game" class="button">Jouer</a>
     </section>
     <section id="game" class="screen">
       <div class="alice"></div>
