--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -28,3 +28,5 @@ p
     font-style: italic
     text-align: center
     font-family: "Calvino Grande", serif
+    max-width: 700px
+    margin: auto
