--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -21,6 +21,8 @@ p
     font-weight: normal
     line-height: px2rem(36)
     font-family: "Calvino Grande", serif
+    max-width: 700px
+    margin: 100px auto
 
 .subtitle
     font-size: px2rem(42)
@@ -28,5 +30,3 @@ p
     font-style: italic
     text-align: center
     font-family: "Calvino Grande", serif
-    max-width: 700px
-    margin: auto
