--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -14,17 +14,15 @@ h1
     font-size: px2rem(80)
     font-weight: bold
     text-align: center
-    font-family: "Calvino Grande", serif
+    font-family: "Calvino", serif
 
 p
     font-size: px2rem(22)
-    font-weight: normal
     line-height: px2rem(36)
-    font-family: "Calvino Grande", serif
+    font-family: "Calvino", serif
 
 .subtitle
     font-size: px2rem(42)
-    font-weight: 100
     font-style: italic
     text-align: center
-    font-family: "Calvino Grande", serif
+    font-family: "Calvino", serif
