--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -30,3 +30,18 @@ p
     font-style: italic
     text-align: center
     font-family: "Calvino Grande", serif
+    max-width: none
+    margin: 30px 
+
+.button
+    position: absolute
+    font-family: "Calvino Grande", serif
+    font-size: px2rem(22)
+    text-align: center
+    text-decoration: none
+    padding: 12px
+    background: black
+    width: 117px
+    height: 53px
+    color: white
+
