--- a/assets/sass/_home.sass
+++ b/assets/sass/_home.sass
@@ -1,5 +1,6 @@
 #home
-    background: #FFEDE9
     padding: px2rem(100)
+    @media (max-width : 600px)
+        padding: px2rem(20)
     &:target
         display: block
