--- a/layouts/index.html
+++ b/layouts/index.html
@@ -9,10 +9,7 @@
 </head>
 <body>
   <main>
-    <section class="game">
-      <div class="alice"></div>
-      <div class="map"></div>
-    </section>
+    <div class="game" id="game"></div>
   </main>
   <footer></footer>
   {{ partial "js.html" }}
