--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,20 +1,9 @@
+body 
+    margin: 0
+
 .game
-    .alice
-        position: absolute
-        z-index: 1
-        display: block
-        width: 159px
-        height: 263px
-        background: url('/assets/images/characters/alice/sprites.png') -10px -10px
-        animation: play 0.8s steps(4) infinite
-    .map
-        position: absolute
-        background-image: url('/assets/images/map/map.jpg')
-        background-size: 100%
-        height: 100%
-        width: 100%
+    height: 100%
+    width: 100%
+    position: fixed
+    display: block
 
-
-@keyframes play
-    100%
-        background-position: -726px
