--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -1,5 +1,6 @@
 body
     background: #FFEDE9
+
 #nav
     position: absolute
     top: 0
@@ -11,8 +12,10 @@ body
     left: 0
     right: 0
     bottom: 0
-    display: none
-
+    &:not(:target)
+        opacity: 0
+        pointer-events: none
+        z-index: -1
 
 h1
     font-size: px2rem(80)
