--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -13,9 +13,7 @@ body
     right: 0
     bottom: 0
     &:not(:target)
-        opacity: 0
-        pointer-events: none
-        z-index: -1
+        display: none
 
 h1
     font-size: px2rem(80)
