--- a/layouts/index.html
+++ b/layouts/index.html
@@ -27,6 +27,8 @@
       <a href="#game" class="button">Jouer</a>
     </section>
     <div class="screen game" id="game"></div>
+    <div id="pop-in-troll"></div>
+    <div id="pop-in-city"></div>
   </main>
   <footer></footer>
   {{ partial "js.html" }}
