--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -5,8 +5,8 @@ body
     position: absolute
     top: 0
     z-index: 10
-    display: none
-
+    // display: none
+    
 .screen
     position: relative
     &:not(:target)
