--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,9 +26,10 @@
       </p>
       <a href="#game" class="button">Jouer</a>
     </section>
-    <div class="screen game" id="game"></div>
-    <div id="pop-in-troll"></div>
-    <div id="pop-in-city"></div>
+    <div class="screen game" id="game">
+      <div id="pop-in-troll"></div>
+      <div id="pop-in-city"></div>
+    </div>
   </main>
   <footer></footer>
   {{ partial "js.html" }}
