--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -5,3 +5,38 @@
   &:not(:target)
     opacity: 0
     pointer-events: none
+
+.pop-in-troll
+  position: relative
+  transition: all 5s ease-in-out
+  color: white
+  background-color: black
+  width: 30%
+  height: 30%
+
+.overlay
+  position: fixed
+  top: 0
+  bottom: 0
+  left: 0
+  right: 0
+  background: rgba(0, 0, 0, 0.7)
+  transition: opacity 500ms
+  visibility: hidden
+  opacity: 0
+
+.overlay:target 
+  visibility: visible
+  opacity: 1
+
+.pop-in-troll .close 
+  top: 20px
+  right: 30px
+  transition: all 200ms
+  font-size: 30px
+  font-weight: bold
+  text-decoration: none
+  color: #333
+
+// #pop-in-city
+//   font-family: "Calvino"
