--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -11,8 +11,8 @@
   transition: all 5s ease-in-out
   color: white
   background-color: black
-  width: 30%
-  height: 30%
+  width: 608px
+  height: 325px
 
 .overlay
   position: fixed
@@ -30,6 +30,7 @@
   opacity: 1
 
 .pop-in-troll .close 
+  position: absolute
   top: 20px
   right: 30px
   transition: all 200ms
@@ -39,4 +40,3 @@
   color: #333
 
 // #pop-in-city
-//   font-family: "Calvino"
