--- a/layouts/index.html
+++ b/layouts/index.html
@@ -22,12 +22,9 @@
       <a href="#game" class="button">Jouer</a>
     </section>
     <div class="screen game" id="game">
-      <a class="button" href="#pop-in-troll">troll</a>
-      <div id="pop-in-troll" class="overlay">
-        <div class="pop-in-troll">
-          <p>Insulte</p>
-          <a class="close" href="#">&times;</a>
-        </div>
+      <div id="pop-in-troll">
+        <p>Insulte</p>
+        <a class="close">&times;</a>
       </div>
       <!-- <div id="pop-in-city"></div> -->
     </div>
