--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -6,37 +6,51 @@
     opacity: 0
     pointer-events: none
 
-.pop-in-troll
-  position: relative
-  transition: all 5s ease-in-out
+#pop-in-troll
+  position: absolute
+  display: block
   color: white
   background-color: black
-  width: 30%
-  height: 30%
+  width: 400px
+  height: 200px
+  top: 50%
+  margin-top: -100px
+  left: 50%
+  margin-left: -200px
+  padding: 40px
+  p
+    font-weight: bold
+    margin: 0
+  .close 
+    position: absolute
+    top: 20px
+    right: 30px
+    transition: all 200ms
+    font-size: 30px
+    font-weight: bold
+    text-decoration: none
+    color: #FFFFFF
 
-.overlay
-  position: fixed
-  top: 0
-  bottom: 0
-  left: 0
-  right: 0
-  background: rgba(0, 0, 0, 0.7)
-  transition: opacity 500ms
-  visibility: hidden
-  opacity: 0
+    //   display: none
+//   &--active
+//     display: block
 
-.overlay:target 
-  visibility: visible
-  opacity: 1
+// .overlay
+//   position: fixed
+//   top: 0
+//   bottom: 0
+//   left: 0
+//   right: 0
+//   background: rgba(0, 0, 0, 0.7)
+//   transition: opacity 500ms
+//   visibility: hidden
+//   opacity: 0
 
-.pop-in-troll .close 
-  top: 20px
-  right: 30px
-  transition: all 200ms
-  font-size: 30px
-  font-weight: bold
-  text-decoration: none
-  color: #333
+// .overlay:target 
+//   visibility: visible
+//   opacity: 1
+
+
 
 // #pop-in-city
 //   font-family: "Calvino"
