--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -33,3 +33,26 @@
     font-weight: bold
     text-decoration: none
     color: #FFFFFF
+
+#pop-in-city
+  position: absolute
+  display: block
+  color: white
+  background-color: #E9FAFF
+  width: 1184px
+  margin: 128px
+  padding: 40px
+  display: none
+  &.active
+    display: block
+  .subtitle
+    color: #FF4E07
+  .close 
+    position: absolute
+    top: 10px
+    right: 20px
+    transition: all 200ms
+    font-size: 30px
+    font-weight: bold
+    text-decoration: none
+    color: #000000
