--- a/layouts/index.html
+++ b/layouts/index.html
@@ -26,7 +26,9 @@
         <p>Insulte</p>
         <a class="close">&times;</a>
       </div>
-      <div id="pop-in-city"></div>
+      <div id="pop-in-city">
+        <a class="close">&times;</a>
+      </div>
     </div>
   </main>
   <footer></footer>
