--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -39,8 +39,10 @@
   display: block
   color: white
   background-color: #E9FAFF
-  width: 1184px
-  margin: 128px
+  top: 128px
+  bottom: 128px
+  left: 128px
+  right: 128px
   padding: 40px
   display: none
   &.active
@@ -48,6 +50,7 @@
   .subtitle
     color: #FF4E07
   .close 
+    cursor: pointer
     position: absolute
     top: 10px
     right: 20px
