--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -50,13 +50,14 @@
     display: block
   .subtitle
     color: #FF4E07
+    font-size: px2rem(50)
   .close 
     cursor: pointer
     position: absolute
     top: 10px
     right: 20px
     transition: all 200ms
-    font-size: 30px
+    font-size: px2rem(30)
     font-weight: bold
     text-decoration: none
     color: #000000
