--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -45,4 +45,8 @@ p
     color: white
     margin: 45%
 
-    
+a
+    color: #000
+    text-decoration-thickness: 1px
+    text-underline-offset: 3px
+    text-decoration-line: underline
