--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -36,6 +36,7 @@
     color: #FFFFFF
 
 #pop-in-city
+  scroll-behavior: auto
   position: absolute
   display: block
   color: white
@@ -44,7 +45,7 @@
   bottom: 128px
   left: 128px
   right: 128px
-  padding: 40px
+  padding: 100px
   display: none
   &.active
     display: block
