--- a/layouts/index.html
+++ b/layouts/index.html
@@ -23,11 +23,14 @@
     </section>
     <div class="screen game" id="game">
       <div id="pop-in-troll">
-        <p>Insulte</p>
+        <p></p>
         <a class="close">&times;</a>
       </div>
     <div id="pop-in-city">
-      <p class="subtitle">Kryptogarten</p>
+      <p class="subtitle"></p>
+      <p class="baseline"></p>
+      <img class="image" alt="">
+      <div class="data"></div>
       <a class="close">&times;</a>
     </div>
     </div>
