--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -6,45 +6,17 @@
     opacity: 0
     pointer-events: none
 
-#pop-in-troll
-  position: absolute
-  display: block
-  color: white
-  background-color: black
-  width: 400px
-  top: 50%
-  margin-top: -100px
-  left: 50%
-  margin-left: -200px
-  padding: 40px
-  display: none
-  &.active
-    display: block
-  p
-    font-weight: bold
-    font-size: px2rem(40)
-    margin: 0
-  .close
-    cursor: pointer
-    position: absolute
-    top: 10px
-    right: 20px
-    transition: all 200ms
-    font-size: 30px
-    font-weight: bold
-    text-decoration: none
-    color: #FFFFFF
-
 #pop-in-city
   position: absolute
   display: block
   color: white
   background-color: #E9FAFF
-  top: 128px
-  bottom: 128px
-  left: 128px
-  right: 128px
-  padding: 100px
+  max-width: 600px
+  width: 60%
+  top: 0
+  bottom: 0
+  right: 0
+  padding: 50px
   display: none
   &.active
     display: block
@@ -55,9 +27,14 @@
     font-size: px2rem(50)
   .close 
     cursor: pointer
-    position: absolute
+    position: fixed
     top: 10px
     right: 20px
+    width: 40px
+    height: 40px
+    border: 1px solid #000
+    border-radius: 50%
+    text-align: center
     transition: all 200ms
     font-size: px2rem(30)
     font-weight: bold
