--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -1,5 +1,6 @@
 body
     background: #B5C9C9
+    color: black
     font-family: "Calvino", serif
 
 .screen
@@ -51,3 +52,7 @@ a
     text-decoration-thickness: 1px
     text-underline-offset: 3px
     text-decoration-line: underline
+
+img
+    display: block
+    max-width: 100%
