add buttons control

--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -44,3 +44,11 @@
     left: auto
     right: 0
   
+
+.game-controls
+  position: fixed
+  bottom: 30px
+  right: 30px
+  user-select: none
+  button
+    padding: 15px
