--- a/layouts/index.html
+++ b/layouts/index.html
@@ -29,6 +29,13 @@
         <div class="data"></div>
         <a class="close">&times;</a>
       </div>
+
+      <div class="game-controls">
+        <button data-action="left">←</button>
+        <button data-action="up">↑</button>
+        <button data-action="down">↓</button>
+        <button data-action="right">→</button>
+      </div>
     </div>
   </main>
   <footer></footer>
