--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -23,6 +23,7 @@ p
     font-family: "Calvino", serif
     max-width: 680px
     margin: 100px auto
+    font-weight: normal
 
 .subtitle
     font-size: px2rem(42)
