--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -39,6 +39,7 @@ p
 .button
     font-family: "Calvino", serif
     font-size: px2rem(22)
+    font-weight: normal
     text-align: center
     text-decoration: none
     padding: 12px
