--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -39,10 +39,22 @@
     font-weight: bold
     text-decoration: none
   blockquote
+    position: relative
     font-style: italic
     font-size: 32px
-  p
-    font-weight: normal
+    &::after
+      position: absolute
+      content: " ” "
+      font-size: 100px
+      font-style: italic
+      left: 0
+      margin-top: 50px
+    &::before
+      content: " “ "
+      font-size: 100px
+      font-style: italic
+
+
   .image
     width: 500px
   @include media-breakpoint-up($md)
