--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -51,9 +51,11 @@
       margin-top: 50px
     &::before
       content: " “ "
+      position: absolute
+      margin-top: -70px
       font-size: 100px
       font-style: italic
-
+      margin-bottom: 0
 
   .image
     width: 500px
