--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -22,8 +22,11 @@
   .subtitle
     color: #FF4E07
     font-size: px2rem(50)
+    text-align: left
+    margin-left: 0
   .baseline
     font-size: 22px
+    font-weight: bold
   .close 
     cursor: pointer
     position: fixed
