--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -27,6 +27,9 @@
   .baseline
     font-size: 22px
     font-weight: bold
+    margin: 30px 0 0 0
+  p
+    margin-top: 30px
   .close 
     cursor: pointer
     position: fixed
@@ -45,6 +48,7 @@
     position: relative
     font-style: italic
     font-size: 32px
+    margin: 62px 0 95px 0
     &::after
       position: absolute
       content: " ” "
