--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -5,6 +5,8 @@ body
 
 .screen
     position: relative
+    background: #E9FAFF
+    height: 100vh
     &:not(:target)
         display: none
 
@@ -13,6 +15,7 @@ h1
     font-size: px2rem(80)
     font-weight: bold
     text-align: center
+    color: #FF4E07
     font-family: "Calvino", serif
     @media (max-width : 600px)
         font-size: px2rem(50)
