--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -5,6 +5,9 @@
   &:not(:target)
     opacity: 0
     pointer-events: none
+    
+#pop-in-troll
+
 
 #pop-in-city
   position: absolute
@@ -27,7 +30,7 @@
   .baseline
     font-size: 22px
     font-weight: bold
-    margin: 30px 0 0 0
+    margin: px2rem(30) 0 0 0
   p
     margin-top: 30px
   .close 
@@ -48,7 +51,7 @@
     position: relative
     font-style: italic
     font-size: 32px
-    margin: 62px 0 95px 0
+    margin: px2rem(62) 0 px2rem(95) 0
     &::after
       position: absolute
       content: " ” "
@@ -59,7 +62,7 @@
     &::before
       content: " “ "
       position: absolute
-      margin-top: -70px
+      margin-top: px2rem(-70)
       font-size: 100px
       font-style: italic
       margin-bottom: 0
