--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -5,9 +5,6 @@
   &:not(:target)
     opacity: 0
     pointer-events: none
-    
-#pop-in-troll
-
 
 #pop-in-city
   position: absolute
@@ -81,7 +78,7 @@
 .game-controls
   position: fixed
   bottom: 30px
-  right: 30px
+  left: 30px
   user-select: none
   button
     padding: 15px
