--- a/layouts/index.html
+++ b/layouts/index.html
@@ -20,6 +20,14 @@
         Ce vademecum virtuel est illustré d’images créées par une intelligence artificielle, avec l’outil Midjourney.
       </p>
       <a href="#game" class="button">Jouer</a>
+
+      <p class="credits">
+        Cette expérience interactive a été conçue par Etienne et Arnaud.
+        La direction artistique et la production graphique sont l'œuvre d'Etienne, avec l'aide de Perrine Joly.
+        Le code JavaScript a été écrit par Alexis Benoit et l'intégration HTML a été faite par Cléo Laffargue.
+        Les textes sont d'Arnaud Levy, à l'exception des phrases des crypto-trolls, qui sont toutes de vraies phrases, collectées sur Twitter et LinkedIn.
+        Respect et gratitude à Aurore Lalucq, qui a subi ces insultes lamentables en travaillant pour l'intérêt général.
+      </p>
     </section>
     <div class="screen game" id="game">
       <div id="pop-in-city">
