--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,6 +30,8 @@
       </p>
     </section>
     <div class="screen game" id="game">
+      <span style="font-family: 'Calvino', cursive;">&nbsp;</span>
+
       <div id="pop-in-city">
         <img class="image" alt="">
         <p class="subtitle"></p>
