--- a/assets/sass/_home.sass
+++ b/assets/sass/_home.sass
@@ -1,3 +1,7 @@
 #home
     padding: px2rem(20)
     background: #E9FAFF
+    img
+        display: block
+        height: 150px
+        margin: 100px auto 0 auto
