--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -1,7 +1,7 @@
 body
     background: #B5C9C9
     color: black
-    font-family: "Calvino", serif
+    font-family: "Calvino"
 
 .screen
     position: relative
