--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -82,3 +82,26 @@
   user-select: none
   button
     padding: 15px
+
+.game-dialog
+  position: fixed
+  z-index: 2
+  top: 0
+  left: 0
+  text-align: center
+  background: black
+  color: white
+  padding: 20px
+  margin-left: 55px
+  transform: translateY(-100%)
+  max-width: 300px
+  &::after
+    content: ''
+    width: 0
+    height: 0
+    border-style: solid
+    border-width: 10px 10px 0 0
+    border-color: black transparent transparent transparent
+    position: absolute
+    top: 100%
+    left: 0
