--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -15,6 +15,7 @@
   inset: 30px
   font-size: 22px
   font-weight: normal
+  z-index: 5
   &.active
     display: block
     overflow-y: scroll
@@ -105,3 +106,11 @@
     position: absolute
     top: 100%
     left: 0
+  &--action
+    background: white
+    color: black
+    text-decoration: underline
+    cursor: pointer
+    margin-left: 0
+    &::after
+      display: none
