--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -126,6 +126,8 @@
       display: none
 
 body.is-popin-opened
+  .game-dialog
+    display: none !important
   #game
     canvas
       transform: translateX(-300px)
