--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -23,36 +23,32 @@ p
     font-size: px2rem(22)
     line-height: 160%
     font-family: "Calvino", serif
-    max-width: 680px
-    margin: 100px auto
+    max-width: 660px
+    margin: 60px auto
     font-weight: normal
+    text-align: center
     &.credits
         font-size: px2rem(18)
-
 
 .subtitle
     font-size: px2rem(42)
     font-style: italic
-    text-align: center
     font-family: "Calvino", serif
     max-width: none
-    margin: 30px
+    margin: 30px 0 0 0
     line-height: 120%
     @media (max-width : 600px)
         font-size: px2rem(40)
 
 .button
     font-family: "Calvino", serif
-    font-size: px2rem(22)
-    font-weight: normal
-    text-align: center
+    font-size: px2rem(26)
     text-decoration: none
     padding: 12px
     padding-left: 32px
     padding-right: 32px
-    background: black
+    background: #FF4E07
     color: white
-    margin: 48%
 
 a
     color: #000
