--- a/assets/sass/_home.sass
+++ b/assets/sass/_home.sass
@@ -1,6 +1,7 @@
 #home
     padding: px2rem(20)
     background: #E9FAFF
+    text-align: center
     img
         display: block
         height: 150px
