--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -48,7 +48,7 @@ p
     padding-left: 32px
     padding-right: 32px
     background: #FF4E07
-    color: white
+    color: black
 
 a
     color: #000
