--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -28,7 +28,7 @@
   &.active
     display: block
   .subtitle
-    color: #FF4E07
+    color: $orange
     font-size: px2rem(50)
     text-align: left
     margin-left: 0
@@ -119,9 +119,8 @@
     top: 100%
     left: 100px
   &--action
-    background: white
+    background: $orange
     color: black
-    text-decoration: underline
     cursor: pointer
     margin-left: 0
     &::after
