--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -62,6 +62,5 @@ img
 
 .game-controls
     button
-        padding: 15px
-        
-    
+        @include media-breakpoint-down($md)
+            padding: 15px
