--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -59,9 +59,8 @@ img
     display: block
     max-width: 100%
 
-
-.game-controls
-    button
-        @include media-breakpoint-down($md)
-            padding: 15px
-            background: red 
+// .game-controls
+//     button
+//         @include media-breakpoint-down($md)
+//             padding: 15px
+             
