--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -59,8 +59,8 @@ img
     display: block
     max-width: 100%
 
-// .game-controls
-//     button
-//         @include media-breakpoint-down($md)
-//             padding: 15px
+.game-controls
+    button
+        @include media-breakpoint-down(667px)
+            padding: 15px
              
