--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -61,6 +61,6 @@ img
 
 .game-controls
     button
-        @include media-breakpoint-down(667px)
+        @include media-breakpoint-down($sm)
             padding: 15px
              
