--- a/assets/sass/_commons.sass
+++ b/assets/sass/_commons.sass
@@ -61,6 +61,8 @@ img
 
 .game-controls
     button
-        @include media-breakpoint-down($sm)
+        border: 1px solid #AFAFAF
+        @include media-breakpoint-up($sm)
             padding: 15px
-             
+
+        
