--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -93,6 +93,9 @@
   user-select: none
   button
     padding: 15px
+    border: 1px solid #AFAFAF
+    @include media-breakpoint-down ($sm)
+      padding: 15px
 
 .game-dialog
   background: black
