--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -96,6 +96,7 @@
     border: 1px solid #AFAFAF
     @include media-breakpoint-down ($sm)
       padding: 15px
+      color: black
 
 .game-dialog
   background: black
