--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -96,7 +96,8 @@
     border: 1px solid #AFAFAF
     @include media-breakpoint-down ($sm)
       padding: 15px
-      color: black
+      .left .right .up .down
+        color: black
 
 .game-dialog
   background: black
