--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -94,6 +94,7 @@
   button
     padding: 15px
     border: 1px solid #AFAFAF
+    background: #F2F2F2
     @include media-breakpoint-down ($sm)
       padding: 15px
       .left .right .up .down
