--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -96,9 +96,11 @@
     border: 1px solid #AFAFAF
     background: #F2F2F2
     @include media-breakpoint-down ($sm)
-      padding: 15px
+      height: 44px
+      width: 44px
       .left .right .up .down
         color: black
+        justify-content: center
 
 .game-dialog
   background: black
