--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -100,7 +100,7 @@
       width: 44px
       .left .right .up .down
         color: black
-        align-self: center
+        justify-content: center
 
 .game-dialog
   background: black
