--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -98,9 +98,10 @@
     @include media-breakpoint-down ($sm)
       height: 44px
       width: 44px
+      color: black
+      justify-content: center
       .left .right .up .down
         color: black
-        justify-content: center
 
 .game-dialog
   background: black
