--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -99,7 +99,7 @@
       height: 44px
       width: 44px
       color: black
-      justify-content: center
+      align-self: center
       .left .right .up .down
         color: black
 
