--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -99,9 +99,12 @@
       height: 44px
       width: 44px
       color: black
-      align-self: center
+      text-align: center
+      padding-left: 15px
+      padding-right: 15px
       .left .right .up .down
         color: black
+      
 
 .game-dialog
   background: black
