--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -102,6 +102,7 @@
       text-align: center
       padding-left: 15px
       padding-right: 15px
+      padding-bottom: 15px
       .left .right .up .down
         color: black
       
