--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -96,13 +96,10 @@
     border: 1px solid #AFAFAF
     background: #F2F2F2
     @include media-breakpoint-down ($sm)
-      height: 44px
       width: 44px
       color: black
       text-align: center
-      padding-left: 15px
-      padding-right: 15px
-      padding-bottom: 15px
+      padding: 15px
       .left .right .up .down
         color: black
       
