--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -97,6 +97,7 @@
     background: #F2F2F2
     @include media-breakpoint-down ($sm)
       width: 44px
+      height: 44px
       color: black
       text-align: center
       padding: 15px
