--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -100,11 +100,9 @@
       height: 44px
       color: black
       text-align: center
+      padding: 15px
       .left .right .up .down
         color: black
-        display: flex
-        align-items: center
-        justify-content: center
 
 .game-dialog
   background: black
