--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -96,7 +96,7 @@
     border: 1px solid #AFAFAF
     background: #F2F2F2
     @include media-breakpoint-down ($sm)
-      width: 44px
+      max-width: 44px
       height: 44px
       color: black
       text-align: center
