--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -96,13 +96,14 @@
     border: 1px solid #AFAFAF
     background: #F2F2F2
     @include media-breakpoint-down ($sm)
-      max-width: 44px
       height: 44px
+      width: 44px
       color: black
       text-align: center
       padding: 15px
       .left .right .up .down
         color: black
+      
 
 .game-dialog
   background: black
