--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -93,16 +93,18 @@
   user-select: none
   button
     padding: 15px
-    border: 1px solid #AFAFAF
-    background: #F2F2F2
+    width: 44px
+    box-shadow: 0px 5px 3px 0px rgba(0, 0, 0, 0.25)
+    background: #5C4638
+    border-radius: 10px
+    color: #F6E3AD
     @include media-breakpoint-down ($sm)
       height: 44px
       width: 44px
-      color: black
       text-align: center
       padding: 15px
       .left .right .up .down
-        color: black
+        color: #F6E3AD
       
 
 .game-dialog
