--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -98,6 +98,7 @@
     background: #5C4638
     border-radius: 10px
     color: #F6E3AD
+    touch-action: none
     @include media-breakpoint-down ($sm)
       height: 44px
       width: 44px
