--- a/layouts/index.html
+++ b/layouts/index.html
@@ -48,10 +48,10 @@
       </div>
 
       <div class="game-controls">
-        <button data-action="left">←</button>
-        <button data-action="up">↑</button>
-        <button data-action="down">↓</button>
-        <button data-action="right">→</button>
+        <button data-action="left"><img class="arrow" src=/assets/images/arrows/gauche.svg></button>
+        <button data-action="up"><img class="arrow" src=/assets/images/arrows/haut.svg></button>
+        <button data-action="down"><img class="arrow" src=/assets/images/arrows/bas.svg></button>
+        <button data-action="right"><img class="arrow" src=/assets/images/arrows/droite.svg></button>
       </div>
     </div>
   </main>
