--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -92,10 +92,10 @@
   left: 30px
   user-select: none
   button
+    -webkit-appearance: none
     box-shadow: 0px 5px 3px 0px rgba(0, 0, 0, 0.25)
     background: #5C4638
     border-radius: 10px
-    border: none
     color: #F6E3AD
     padding: 5px
     touch-action: manipulation
@@ -105,6 +105,7 @@
     .arrow
       height: 44px
       width: 44px
+      
       
 
 .game-dialog
