--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -96,6 +96,7 @@
     box-shadow: 0px 5px 3px 0px rgba(0, 0, 0, 0.25)
     background: #5C4638
     border-radius: 10px
+    border: none
     color: #F6E3AD
     padding: 5px
     touch-action: manipulation
