--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -106,8 +106,10 @@
     .arrow
       height: 44px
       width: 44px
-      
-      
+  button:active
+    transform: translateY(5px)
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.25)
+        
 
 .game-dialog
   background: black
