--- a/layouts/index.html
+++ b/layouts/index.html
@@ -48,7 +48,7 @@
       </div>
 
       <div class="game-controls">
-        <button data-action="left"><img class="arrow" src=/assets/images/arrows/gauche.svg></button>
+        <button data-action="left" class="normal" onclick='NoShadow(event);'><img class="arrow" src=/assets/images/arrows/gauche.svg></button>
         <button data-action="up"><img class="arrow" src=/assets/images/arrows/haut.svg></button>
         <button data-action="down"><img class="arrow" src=/assets/images/arrows/bas.svg></button>
         <button data-action="right"><img class="arrow" src=/assets/images/arrows/droite.svg></button>
