--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -34,7 +34,6 @@
   z-index: 5
   overflow-y: scroll
   scroll-behavior: smooth
-
   &.active
     display: block
   .subtitle
@@ -101,6 +100,7 @@
   bottom: 30px
   left: 30px
   user-select: none
+  z-index: 5
   button
     -webkit-appearance: none
     box-shadow: 0px 5px 3px 0px rgba(0, 0, 0, 0.25)
@@ -125,39 +125,57 @@
   background: black
   color: white
   display: none
-  font-size: px2rem(20)
-  font-weight: bold
   left: 0
   line-height: 130%
-  margin-left: 65px
   max-width: 300px
-  padding: 10px 15px 15px
+  padding: 20px 15px 25px
   position: fixed
   top: 0
-  transform: translateY(-100%)
+  transform: translateX(-50%) translateY(-100%)
+  width: max-content
+  transition: opacity .3s
   z-index: 2
-  &::after
-    content: ''
-    width: 0
-    height: 0
-    border-style: solid
-    border-width: 10px 10px 0 0
-    border-color: black transparent transparent transparent
-    position: absolute
-    top: 100%
-    left: 100px
+  p
+    font-size: px2rem(20)
+    font-weight: bold
+    margin: 0
+  small
+    font-size: px2rem(14)
+    text-align: right
+    display: block
+  &:not(.game-dialog--action)
+    transform: translateX(calc(-50% + 70px))  translateY(-100%)
+    min-width: 200px
+    &::after
+      content: ''
+      width: 0
+      height: 0
+      border-style: solid
+      border-width: 10px 10px 0 0
+      border-color: black transparent transparent transparent
+      position: absolute
+      top: 100%
+      left: 30%
   &--action
     background: $orange
     color: black
     cursor: pointer
     margin-left: 0
-    transform: translate(25%, -100%)
-    &::after
-      display: none
+    text-align: center
+    z-index: 3
+    &:hover
+      color: $orange
+      background: black
+    &::before
+      content: 'Visiter ↓'
+
+body.is-popin-opened, body.is-popin-closing
+  .game-dialog
+    // display: none !important
+    transition-duration: 0.1s
+    opacity: 0
 
 body.is-popin-opened
-  .game-dialog
-    display: none !important
   @include media-breakpoint-up($md)
     #game
       canvas
