--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -9,8 +9,6 @@
 .game-container
   position: fixed
   inset: 0
-  touch-action: manipulation
-  user-select: none
 
 #game
   display: block
@@ -105,22 +103,22 @@
   z-index: 5
   button
     -webkit-appearance: none
+    user-select: none
     box-shadow: 0px 5px 3px 0px rgba(0, 0, 0, 0.25)
     background: #5C4638
     border-radius: 10px
     border: none
     color: #F6E3AD
     padding: 5px
-    touch-action: manipulation
     @include media-breakpoint-down ($sm)
       text-align: center
       padding: 5px
     .arrow
       height: 44px
       width: 44px
-  button:active
-    transform: translateY(5px)
-    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.25)
+  // button:active
+  //   transform: translateY(5px)
+  //   box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.25)
         
 
 .game-dialog
