--- a/layouts/index.html
+++ b/layouts/index.html
@@ -19,7 +19,7 @@
     <section id="home" class="screen">
       <img src="/assets/images/alice.png" alt="Alice">
       <h1>Alice au pays des cryptos</h1>
-      <p class="subtitle">Une plongée sociologique, gratuite et duplicable</p>
+      <p class="subtitle">Une plongée sociologique, ludique et gratuite</p>
       <p>
         Le monde des cryptos & des NFTs peut être à la fois dense et superficiel, transparent et opaque, technique et mystique. 
         Afin de guider les visiteurs et les curieux, 
