--- a/layouts/index.html
+++ b/layouts/index.html
@@ -46,6 +46,12 @@
         <div class="data"></div>
         <a class="close">&times;</a>
       </div>
+      <div id="Definitions">
+        <img class="image" alt="">
+        <p class="title"></p>
+        <p class="text"></p>
+        <div class="data"></div>
+      </div>
 
       <div class="game-controls">
         <button data-action="left"><img class="arrow" src=/assets/images/arrows/gauche.svg></button>
