--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -15,6 +15,7 @@
   position: fixed
   inset: 0
   background-image: url('/assets/images/sea/pattern-sea.png')
+  background-size: 30px
   animation: 3s sea infinite ease-in-out
   z-index: 1
   &:not(:target)
