--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -22,7 +22,7 @@
     opacity: 0
     pointer-events: none
   canvas, #pop-in-city
-    transition: 0.5s transform
+    transition: 0.5s transform ease-in-out
 
 #pop-in-city
   position: absolute
@@ -129,7 +129,7 @@
   left: 0
   line-height: 130%
   max-width: 300px
-  padding: 20px 15px 25px
+  padding: 10px 15px 15px
   position: fixed
   top: 0
   transform: translateX(-50%) translateY(-100%)
@@ -174,12 +174,13 @@ body.is-popin-opened, body.is-popin-closing
   .game-dialog
     // display: none !important
     transition-duration: 0.1s
+    transition-timing-function: ease-in-out
     opacity: 0
 
 body.is-popin-opened
   @include media-breakpoint-up($md)
     #game
       canvas
-        transform: translateX(-300px)
+        transform: translateX(-100px)
 
   
