--- a/layouts/index.html
+++ b/layouts/index.html
@@ -46,12 +46,13 @@
         <div class="data"></div>
         <a class="close">&times;</a>
       </div>
-      <!-- <div id="definitions">
+      <div id="pop-in-coin">
         <img class="image" alt="">
-        <p class="title"></p>
-        <p class="text"></p>
+        <p class="subtitle"></p>
+        <p class="baseline"></p>
         <div class="data"></div>
-      </div> -->
+        <a class="close">&times;</a>
+      </div>
 
       <div class="game-controls">
         <button data-action="left"><img class="arrow" src=/assets/images/arrows/gauche.svg></button>
