--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -122,6 +122,14 @@
     font-size: px2rem(30)
     text-decoration: none
     text-align: center
+  .subtitle
+    color: $orange
+    font-size: px2rem(50)
+    font-weight: bold
+    font-style: normal
+  img.image
+    justify-content: center
+    margin: 0
 
 .game-controls
   position: fixed
