--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -127,9 +127,13 @@
     font-size: px2rem(50)
     font-weight: bold
     font-style: normal
+    text-align: center
   img.image
+    transform: rotate(25deg)
+    width: 64px
+    height: 64px
     justify-content: center
-    margin: 0
+    margin-left: 40%
 
 .game-controls
   position: fixed
