--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -2,6 +2,8 @@
 @import "_utils"
 @import "_variables"
 @import "_fonts"
+@import "_typography"
 @import "_commons"
+@import "_definitions"
 @import "_home"
 @import "_game"
