--- a/assets/sass/_game.sass
+++ b/assets/sass/_game.sass
@@ -27,7 +27,7 @@
 #pop-in-city
   position: absolute
   display: block
-  background-color: #E9FAFF
+  background-color: $background-color
   padding: 50px
   inset: 30px
   font-size: 22px
@@ -135,31 +135,6 @@
     justify-content: center
     margin-left: 40%
 
-.game-controls
-  position: fixed
-  bottom: 30px
-  left: 30px
-  user-select: none
-  z-index: 5
-  button
-    -webkit-appearance: none
-    user-select: none
-    box-shadow: 0px 5px 3px 0px rgba(0, 0, 0, 0.25)
-    background: #5C4638
-    border-radius: 10px
-    border: none
-    color: #F6E3AD
-    padding: 5px
-    @include media-breakpoint-down ($sm)
-      text-align: center
-      padding: 5px
-    .arrow
-      height: 44px
-      width: 44px
-  button:active
-    transform: translateY(5px)
-    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.25)
-  
 
 .game-dialog
   background: black
@@ -209,7 +184,7 @@
     &::before
       content: 'Visiter ↓'
 
-body.pop-in-city--opened, 
+body.pop-in-city--opened,
 body.is-popin-closing
   .game-dialog
     transition-duration: 0.1s
@@ -222,4 +197,72 @@ body.pop-in-city--opened
       canvas
         transform: translateX(-100px)
 
+  
+
+.game-ui
+  position: fixed
+  inset: 30px
+  z-index: 5
+
+.coins
+  display: flex
+  position: absolute
+  top: 0
+  left: 0
+  gap: 3px
+  .coin
+    cursor: pointer
+    width: 30px
+    height: 30px
+    background-image: url('/assets/images/coin/flat-coin.png')
+    background-size: contain
+    p
+      background: black
+      color: white
+      font-size: px2rem(14)
+      padding: px2rem(5) px2rem(10)
+      position: absolute
+      top: 100%
+      margin-top: 10px
+      white-space: nowrap
+      opacity: 0
+      transition: .23s
+      transform: translateY(10px)
+      &::after
+        content: ''
+        width: 0
+        height: 0
+        border-style: solid
+        border-width: 0 6px 10px 6px
+        border-color: transparent transparent black transparent
+        position: absolute
+        bottom: 100%
+        left: 9px
+    &:hover p
+      opacity: 1
+      transform: translateY(0)
+
+.controls
+  position: absolute
+  bottom: 0
+  left: 0
+  user-select: none
+  button
+    -webkit-appearance: none
+    user-select: none
+    box-shadow: 0px 5px 3px 0px rgba(0, 0, 0, 0.25)
+    background: #5C4638
+    border-radius: 10px
+    border: none
+    color: #F6E3AD
+    padding: 5px
+    @include media-breakpoint-down ($sm)
+      text-align: center
+      padding: 5px
+    .arrow
+      height: 44px
+      width: 44px
+  button:active
+    transform: translateY(5px)
+    box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.25)
   
