--- a/layouts/index.html
+++ b/layouts/index.html
@@ -39,6 +39,7 @@
       </p>
     </section>
     <div class="screen game" id="game">
+
       <div id="pop-in-city">
         <img class="image" alt="">
         <p class="subtitle"></p>
@@ -46,19 +47,36 @@
         <div class="data"></div>
         <a class="close">&times;</a>
       </div>
-      <div id="pop-in-coin">
-        <img class="image" alt="">
-        <p class="subtitle"></p>
-        <p class="baseline"></p>
-        <div class="data"></div>
-        <a class="close">&times;</a>
+
+      <div class="definitions">
+        <ul>
+          {{ range site.Data.definitions }}
+            <li class="definition popin">
+              <article class="definition">
+                <h2>{{ .title }}</h2>
+                {{ safeHTML .content  }}
+                <a class="close">&times;</a>
+              </article>
+            </li>
+          {{ end }}
+        </ul>
       </div>
 
-      <div class="game-controls">
-        <button data-action="left"><img class="arrow" src=/assets/images/arrows/gauche.svg></button>
-        <button data-action="up"><img class="arrow" src=/assets/images/arrows/haut.svg></button>
-        <button data-action="down"><img class="arrow" src=/assets/images/arrows/bas.svg></button>
-        <button data-action="right"><img class="arrow" src=/assets/images/arrows/droite.svg></button>
+      <div class="game-ui">
+        <div class="coins">
+          <div class="coin">
+            <p>Crypto bro</p>
+          </div>
+          <div class="coin">
+            <p>Crypto monnaie</p>
+          </div>
+        </div>
+        <div class="controls">
+          <button data-action="left"><img class="arrow" src=/assets/images/arrows/gauche.svg></button>
+          <button data-action="up"><img class="arrow" src=/assets/images/arrows/haut.svg></button>
+          <button data-action="down"><img class="arrow" src=/assets/images/arrows/bas.svg></button>
+          <button data-action="right"><img class="arrow" src=/assets/images/arrows/droite.svg></button>
+        </div>
       </div>
     </div>
   </main>
